--- a/diwali-2025/index.html
+++ b/diwali-2025/index.html
@@ -87,11 +87,12 @@
   <header>
     <h1>🌟 Diwali Celebration – Festival of Lights 🌟</h1>
     <p>Join us for an evening of lights, culture, and creativity!</p>
+    📅 Event Date: 8th Nov 2025 4:00 PM onwards
   </header>
 
   <main>
     <h2>🎭 Event Performances</h2>
-    <p><em>Happening on 8th November 2025, from 4:00 PM onwards</em></p>
+    <p><em>Entries need to be submitted before 5th October 2025</em></p>
     <div class="grid">
       <div class="activity">
         <h3>✨ Incredible India – Family Ramp Walk</h3>
