--- a/diwali-2025/index.html
+++ b/diwali-2025/index.html
@@ -33,7 +33,7 @@
   </div>
 
   <!-- Header Section -->
-  <header class="bg-gradient-to-r from-orange-400 to-yellow-400 text-white text-center py-10 px-4 rounded-b-3xl shadow-2xl mt-4 mx-4 sm:mx-8 md:mx-12 lg:mx-20">
+  <header class="bg-gradient-to-r from-orange-400 to-yellow-400 text-white text-center py-10 px-4 rounded-3xl shadow-2xl mt-4 mx-4 sm:mx-8 md:mx-12 lg:mx-20">
     <h1 class="text-3xl sm:text-5xl md:text-6xl font-extrabold mb-2 leading-tight tracking-wide">
       <span class="inline-block animate-pulse">🌟</span> Diwali Celebration – Festival of Lights <span class="inline-block animate-pulse">🌟</span>
     </h1>
@@ -72,7 +72,7 @@
           <div class="text-5xl mb-4">🎭</div>
           <h3 class="text-xl font-bold text-amber-600 mb-2">Dashavataram</h3>
           <p class="text-gray-700">
-            A powerful dramatic performance portraying the ten incarnations of Lord Vishnu. Blending devotion, storytelling, and theatre, this play brings mythology to life with energy and grace.
+            A powerful dramatic performance portraying the ten incarnations of Lord Vishnu. Blending devotion, storytelling, and theatre, this play brings tradition to life with energy and grace.
           </p>
         </div>
         <!-- Performance Card 3 -->
