--- a/diwali-2025/index.html
+++ b/diwali-2025/index.html
@@ -62,9 +62,11 @@
         <!-- Performance Card 1 -->
         <div class="bg-white p-6 rounded-3xl shadow-xl border border-gray-100 transition-transform transform hover:scale-105 duration-300">
           <div class="text-5xl mb-4">✨</div>
-          <h3 class="text-xl font-bold text-amber-600 mb-2">Incredible India – Family Ramp Walk</h3>
-          <p class="text-gray-700">
-            Families showcase the vibrant diversity of India through colorful attire and cultural pride. Each step on the ramp celebrates unity in diversity, reminding us of India’s rich heritage.
+          <h3 class="text-xl font-bold text-amber-600 mb-2">Incredible India - Family Ramp Walk</h3>
+            <p class="text-gray-700">
+              We are excited to invite you to participate a special cultural event for adults this Diwali. This showcase brings together the traditions, music, dance, and folk arts of our nation's many states, highlighting the beauty of our customs and traditional dress.
+              <br><br>
+              This is a wonderful opportunity for each of us to represent our home state and bring its culture to life. Your participation will make this celebration truly memorable. If you're interested in joining, please let us know—your involvement will add immense value to this incredible event!
           </p>
         </div>
         <!-- Performance Card 2 -->
