Content added requesting participation

--- a/diwali-2025/index.html
+++ b/diwali-2025/index.html
@@ -74,7 +74,7 @@
           <div class="text-5xl mb-4">🎭</div>
           <h3 class="text-xl font-bold text-amber-600 mb-2">Dashavataram</h3>
           <p class="text-gray-700">
-            A powerful dramatic performance portraying the ten incarnations of Lord Vishnu. Blending devotion, storytelling, and theatre, this play brings tradition to life with energy and grace.
+            A powerful dramatic performance portraying the ten incarnations of Lord Vishnu. We invite you to bring this tradition to life with energy, grace, and devotion on stage!
           </p>
         </div>
         <!-- Performance Card 3 -->
@@ -82,7 +82,7 @@
           <div class="text-5xl mb-4">💃</div>
           <h3 class="text-xl font-bold text-amber-600 mb-2">Dancing</h3>
           <p class="text-gray-700">
-            Enjoy lively classical and modern Indian dance performances. From graceful steps to energetic beats, the dances will fill the stage with rhythm, color, and festive joy.
+            Share your talent on stage! We invite all members to fill the stage with rhythm, color, and festive joy.
           </p>
         </div>
         <!-- Performance Card 4 -->
@@ -90,7 +90,7 @@
           <div class="text-5xl mb-4">🎤</div>
           <h3 class="text-xl font-bold text-amber-600 mb-2">Singing</h3>
           <p class="text-gray-700">
-            Our singers will perform soulful melodies and festive songs. From traditional bhajans to vibrant Bollywood numbers, the music will lift your mood and spread cheer.
+            Lend your voice to the festivities! We invite all members to perform soulful melodies and vibrant songs that will lift everyone's mood and spread cheer.
           </p>
         </div>
         <!-- Performance Card 5 -->
@@ -98,7 +98,7 @@
           <div class="text-5xl mb-4">🎬</div>
           <h3 class="text-xl font-bold text-amber-600 mb-2">Drama</h3>
           <p class="text-gray-700">
-            Creative drama performances bring stories and emotions to life. With powerful acting and meaningful storytelling, these plays connect audiences to tradition and culture.
+            Do you have a story to tell? We welcome creative and powerful dramatic performances that bring emotions to life and connect our community to tradition and culture.
           </p>
         </div>
       </div>
