--- a/diwali-2025/index.html
+++ b/diwali-2025/index.html
@@ -16,7 +16,7 @@
     .schedule-card {
       background-color: #8D183B;
       color: white;
-      padding: 1.5rem;
+      padding: 1rem;
       border-radius: 1.5rem;
       box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
       border: 1px solid #FFC000;
@@ -79,7 +79,7 @@
         <!-- Schedule Item 1 -->
         <div class="schedule-card flex flex-col justify-start text-center">
           <h3 class="text-xl font-bold text-light-gold mb-2">Welcome & Mingle</h3>
-          <p class="text-white text-sm flex-grow">
+          <p class="text-white flex-grow">
             Arrive and mingle with friends and family. Enjoy the showcase of artwork submitted from pre-event activities.
           </p>
         </div>
@@ -87,7 +87,7 @@
         <!-- Schedule Item 2 -->
         <div class="schedule-card flex flex-col justify-start text-center">
           <h3 class="text-xl font-bold text-light-gold mb-2">Cultural Performances</h3>
-          <p class="text-white text-sm flex-grow">
+          <p class="text-white flex-grow">
             Enjoy a lineup of dance, singing, and drama performances showcasing the incredible talent within our community.
           </p>
         </div>
@@ -95,7 +95,7 @@
         <!-- Schedule Item 3 -->
         <div class="schedule-card flex flex-col justify-start text-center">
           <h3 class="text-xl font-bold text-light-gold mb-2">Delicious Food</h3>
-          <p class="text-white text-sm flex-grow">
+          <p class="text-white flex-grow">
             Indulge in a delicious array of traditional Indian dishes and festival treats.
           </p>
         </div>
@@ -103,7 +103,7 @@
         <!-- Schedule Item 4 -->
         <div class="schedule-card flex flex-col justify-start text-center">
           <h3 class="text-xl font-bold text-light-gold mb-2">Family Sparklers Lighting</h3>
-          <p class="text-white text-sm flex-grow">
+          <p class="text-white flex-grow">
             Create a dazzling atmosphere with a magical family sparkler lighting display.
           </p>
         </div>
