Added google analytics

--- a/diwali-2025/index.html
+++ b/diwali-2025/index.html
@@ -33,6 +33,16 @@
     .text-light-gold { color: #FFD700; }
     .border-gold { border-color: #FFC000; }
   </style>
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGELMJ9LTJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-DGELMJ9LTJ');
+  </script>
+  
 </head>
 <body class="bg-dark-maroon text-white">
 
